# chgemm

./: .travis.yml  MMult_4x16_19.c  MMult_4x16_20.c  MMult_4x8_21.c  MMult_4x8_22.c  README  README.md  compare_matrices.c  int8gemm.cpp  int8gemm.h  int8kernel.S  int8kernel_m1.S  int8kernel_m2.S  int8kernel_m4.S  kernel_m4n4k16.S  makefile  parameters.h  public.h  reorder.S  reorder_a.S  reorder_b.S  reorder_b.h  test_MMult.c
android/MyApplication/app/: build.gradle
android/MyApplication/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/MyApplication/app/src/main/java/com/example/myapplication/: MainActivity.java
android/MyApplication/gradle/wrapper/: gradle-wrapper.properties
